--- a/views/index.pug
+++ b/views/index.pug
@@ -1,9 +1,6 @@
-h2 Envio de imagenes
+h2 Agregar Ficheros al SERVER
 div
-    <form action="/subir", method="POST", enctype="multipart/form-data">
+    form(action="/upload", method="POST", enctype="multipart/form-data")
         label Imagen
-        input(type="file", name="file")
+        input(type="file", name="imagen")
         input(type="submit", value="Enviar")
-    </form>
-    a(href="descargar") DESCARGAR
-
