--- a/views/index.pug
+++ b/views/index.pug
@@ -1,6 +1,6 @@
 h2 Agregar Ficheros al SERVER
 div
-    form(action="/upload", method="POST", enctype="multipart/form-data")
+    form(action="/subir", method="POST", enctype="multipart/form-data")
         label Imagen
         input(type="file", name="imagen")
         input(type="submit", value="Enviar")
