--- a/views/index.pug
+++ b/views/index.pug
@@ -4,3 +4,4 @@ div
         label Imagen
         input(type="file", name="imagen")
         input(type="submit", value="Enviar")
+        a(href='descargar')
