ya se puede descargar imagen

--- a/views/index.pug
+++ b/views/index.pug
@@ -4,4 +4,5 @@ div
         label Imagen
         input(type="file", name="imagen")
         input(type="submit", value="Enviar")
-        a(href='descargar')
+        br
+        a(href='descargar') DESCARGAR
