Solucionano errores.. XD

--- a/views/index.pug
+++ b/views/index.pug
@@ -2,7 +2,7 @@ h2 Agregar Ficheros al SERVER
 div
     form(action="/subir", method="POST", enctype="multipart/form-data")
         label Imagen
-        input(type="file", name="imagen")
+        input(type="file", name="file")
         input(type="submit", value="Enviar")
         br
         a(href='descargar') DESCARGAR
