Modificando envio de correo

--- a/views/index.pug
+++ b/views/index.pug
@@ -1,4 +1,4 @@
-h2 Agregar Ficheros al SERVER
+h2 Agregue una imagen al servidor
 div
     form(action="/subir", method="POST", enctype="multipart/form-data")
         label Imagen
