estado de los servidores

--- a/views/state.html
+++ b/views/state.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Estado de servidore</title>
     <meta charset="utf-8">
-    <script type="text/javascript">
+    <script>
         const estadoServidores = require("../larchivos/readFile.js"),
         var objetivo = document.getElementById('texto_nav1').innerHTML;
         objetivo.innerHTML = estadoServidores.infoServers();
