se anadieron estilos

--- a/views/index.html
+++ b/views/index.html
@@ -13,8 +13,13 @@ div
 <head>
 	<title>Lab2 Santiago Sosa Reyes</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="estilos.css">
 </head>
     <body> 
+        <ul>
+            <li><a href="index2.html">Reportar Falla</a></li>
+            <li><a href="state.html">Estado servidores</a></li>
+        </ul>
         <h1>Frase famosa</h1>
         <p>Agregue una imagen a la cual quiere escribirle alguna frase aleatoria..</p>
         <form action="/subir" method="POST" enctype="multipart/form-data">
