--- a/views/state.html
+++ b/views/state.html
@@ -15,8 +15,13 @@
           
         }
     </script>
+    <link rel="stylesheet" href="estilos.css">
 </head>
-    <body> 
+    <body>
+        <ul>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="index2.html">Reportar falla</a> </li>
+        </ul>
         <h1>Estado servidores</h1>
         <p>Si alguno de los dos servidores no funciona informe mediante correo electronico en /index2.html</p>
         <p id="demo" for="boton">Click en el boton para actualizar el estado de los servidores</p>
