--- a/views/index2.html
+++ b/views/index2.html
@@ -18,8 +18,13 @@
 <head>
 	<title>Enviar Alerta</title>
     <meta charset="utf-8">
+	<link rel="stylesheet" href="estilos.css">
 </head>
     <body> 
+		<ul>
+			<li><a href="index.html">Inicio</a></li>
+        	<li><a href="state.html">estado servidores</a> </li>
+		</ul>
         <h1>Envie alerta </h1>
         <p>Ingrese un correo al cual quiere generar una alerta de fallo de algun servidor.</p>
         <form action="/enviarCorreo" method="GET">
