--- a/views/index2.html
+++ b/views/index2.html
@@ -24,6 +24,7 @@
 		<ul>
 			<li><a href="index.html">Inicio</a></li>
         	<li><a href="state.html">estado servidores</a> </li>
+			<li><a href="createNewVM.html">Create VM</a></li>
 		</ul>
         <h1>Envie alerta </h1>
         <p>Ingrese un correo al cual quiere generar una alerta de fallo de algun servidor.</p>
