--- a/views/index.html
+++ b/views/index.html
@@ -19,6 +19,7 @@ div
         <ul>
             <li><a href="index2.html">Reportar Falla</a></li>
             <li><a href="state.html">Estado servidores</a></li>
+            <li><a href="createNewVM.html">Create VM</a></li>
         </ul>
         <h1>Frase famosa</h1>
         <p>Agregue una imagen a la cual quiere escribirle alguna frase aleatoria..</p>
